--- a/home.html
+++ b/home.html
@@ -209,9 +209,10 @@
                 <img src="./assets/img/posters/MoviePoster_3.png" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
+                <span class="top-ten"></span>
                                         <!-- Media Player Start -->
                                         <div class="media-player">
-                                            <img class="player-image" src="./assets/img/posters/MoviePoster_4.png">
+                                            <img class="player-image" src="./assets/img/posters/outerbanks.jpg">
                                             <div class="player-container">
                                                 <span class="card-play"></span>
                                                 <span class="card-add"></span>
@@ -226,7 +227,7 @@
                                         </div>
                                     </div>
                                     <!-- Media Player Start -->
-                <img src="./assets/img/posters/MoviePoster_4.png" alt="New Amsterdam">
+                <img src="./assets/img/posters/outerbanks.jpg" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
                                         <!-- Media Player Start -->
@@ -269,9 +270,10 @@
                 <img src="./assets/img/posters/MoviePoster_6.png" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
+                    <span class="top-ten"></span>
                                         <!-- Media Player Start -->
                                         <div class="media-player">
-                                            <img class="player-image" src="./assets/img/posters/MoviePoster_7.png">
+                                            <img class="player-image" src="./assets/img/posters/theoffice.webp">
                                             <div class="player-container">
                                                 <span class="card-play"></span>
                                                 <span class="card-add"></span>
@@ -286,7 +288,7 @@
                                         </div>
                                     </div>
                                     <!-- Media Player Start -->
-                <img src="./assets/img/posters/MoviePoster_7.png" alt="New Amsterdam">
+                <img src="./assets/img/posters/theoffice.webp" alt="New Amsterdam">
             </div>
             <div class="movie-poster">
                                         <!-- Media Player Start -->
